# fondos_comunes

./: .fondos_comunes.toml  README.md  actualizar_csv_fondos.py  diferencias_fondos.py  pyproject.toml
actualizador/: actualizadores.py
diferenciador/: diferenciadores.py
